[tool.poetry]
name = "accounting"
version = "0.1.0"
description = "Contains different connectors and parsers for banking data."
authors = ["Jitse-Jan <code@jitsejan.com>"]
license = "BSD 2"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
jupyter = "^1.0.0"
requests = "^2.25.1"
lxml = "^4.6.3"
cssselect = "^1.1.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
